# RapidRAW

./: .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: build.yml  ci.yml  pr-ci.yml  release.yml
patches/linux/: 0001-window-transparency.sh
src/: App.jsx  App.tsx  styles.css  sync-version.js  themes.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/rawler/src/: pixarray.rs  rawimage.rs
src-tauri/rawler/src/decoders/: dng.rs
src-tauri/rawler/src/imgop/: develop.rs  mod.rs
src-tauri/rawler/src/imgop/sensor/xtrans/: demosaic.rs  mod.rs
src-tauri/rawloader/data/cameras/sony/: a6100a.toml  a6400.toml  a6700.toml
src-tauri/rawloader/src/: lib.rs
src-tauri/rawloader/src/decoders/: basics.rs  dng.rs  pumps.rs  rw2.rs
src-tauri/rawloader/src/decoders/ljpeg/: decompressors.rs  huffman.rs  mod.rs
src-tauri/src/: ai_processing.rs  comfyui_connector.rs  file_management.rs  formats.rs  gpu_processing.rs  image_loader.rs  image_processing.rs  inpainting.rs  lib.rs  main.rs  mask_generation.rs  panorama_stitching.rs  raw_processing.rs  sam_processing.rs  shader.wgsl  tagging.rs
src-tauri/src/panorama_utils/: mod.rs  processing.rs  stitching.rs
src-tauri/src/tagging_utils/: candidates.rs  hierarchy.rs  mod.rs
src-tauri/workflows/: generative_erase.json  generative_replace.json
src/components/: BasicAdjustments.jsx  Controls.jsx  CurveGraph.jsx  Editor.jsx  Filmstrip.jsx  FolderTree.jsx  HSL.jsx  Library.jsx  MainLibrary.jsx
src/components/adjustments/: Basic.jsx  Basic.tsx  BasicAdjustments.jsx  Color.jsx  Color.tsx  ColorPanel.jsx  CurveGraph.jsx  Curves.jsx  Curves.tsx  Details.jsx  Details.tsx  Effects.jsx  Effects.tsx  EffectsPanel.jsx
src/components/modals/: AddPresetModal.jsx  AddPresetModal.tsx  ConfirmModal.jsx  ConfirmModal.tsx  CreateFolderModal.jsx  CreateFolderModal.tsx  ImportSettingsModal.jsx  ImportSettingsModal.tsx  PanoramaModal.jsx  PanoramaModal.tsx  RenameFileModal.jsx  RenameFileModal.tsx  RenameFolderModal.jsx  RenameFolderModal.tsx  RenamePresetModal.jsx  RenamePresetModal.tsx
src/components/panel/: AIPanel.jsx  BottomBar.jsx  BottomBar.tsx  Controls.jsx  CropPanel.jsx  Editor.jsx  Editor.tsx  Filmstrip.jsx  Filmstrip.tsx  FolderTree.jsx  FolderTree.tsx  Library.jsx  MainLibrary.jsx  MainLibrary.tsx  MetadataPanel.jsx  ResizePanel.jsx  RightPanelSwitcher.jsx  SettingsPanel.jsx  SettingsPanel.tsx
src/components/panel/editor/: EditorToolbar.jsx  EditorToolbar.tsx  FullScreenViewer.jsx  FullScreenViewer.tsx  ImageCanvas.jsx  ImageCanvas.tsx  Waveform.jsx  Waveform.tsx
src/components/panel/right/: AIControls.jsx  AIControls.tsx  AIPanel.jsx  AIPanel.tsx  AiControls.jsx  Controls.jsx  ControlsPanel.jsx  ControlsPanel.tsx  CropPanel.jsx  CropPanel.tsx  ExportImportProperties.tsx  ExportPanel.jsx  ExportPanel.tsx  LibraryExportPanel.jsx  LibraryExportPanel.tsx  MaskControls.jsx  MaskControls.tsx  Masks.tsx  MasksPanel.jsx  MasksPanel.tsx  MetadataPanel.jsx  MetadataPanel.tsx  PresetsPanel.jsx  PresetsPanel.tsx  RightPanelSwitcher.jsx  RightPanelSwitcher.tsx
src/components/ui/: AppProperties.tsx  Button.jsx  Button.tsx  CollapsibleSection.jsx  CollapsibleSection.tsx  ColorWheel.jsx  ColorWheel.tsx  ContextMenu.jsx  Dropdown.jsx  Dropdown.tsx  Input.jsx  Input.tsx  Resizer.jsx  Resizer.tsx  Slider.jsx  Slider.tsx  Switch.jsx  Switch.tsx
src/context/: ContextMenuContext.jsx  ContextMenuContext.tsx
src/hooks/: useHistoryState.js  useHistoryState.tsx  useImageRenderSize.js  useImageRenderSize.tsx  useKeyboardShortcuts.js  useKeyboardShortcuts.tsx  useKeydown.js  useKeydown.tsx  usePresets.js  usePresets.ts  useThumbnails.js  useThumbnails.tsx
src/utils/: adjustments.js  adjustments.tsx  maskUtils.js  maskUtils.tsx  palette.js  palette.tsx  themes.js  themes.tsx
src/window/: TitleBar.jsx  TitleBar.tsx
