[package]
name = "RapidRAW"
version = "0.0.0"
description = "A blazingly-fast, non-destructive, and GPU-accelerated RAW image editor built with performance in mind."
authors = ["Timon Käch"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rapidraw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = [ "macos-private-api", "rustls-tls"] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.0"
base64 = "0.21"
tauri-plugin-fs = "2.3.0"
rayon = "1.10.0"
blake3 = "1.5.1"
palette = "0.7"
jpeg-decoder = "0.3.0"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
window-vibrancy = "0.6.0"
anyhow = "1.0.98"
kamadak-exif = "0.6.1"
rawloader = { path = "rawloader" }
serde_bytes = "0.11.17"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
walkdir = "2.5.0"
trash = "5.2.2"
imageproc = "0.25.0"
ort = { version = "1.15.2", features = ["load-dynamic"] }
ndarray = "0.15.6"
reqwest = { version = "0.11", features = ["json", "stream"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.dev]
opt-level = 3
debug = true